--- a/public/app/style/master.css
+++ b/public/app/style/master.css
@@ -5,8 +5,64 @@
   --pink: #E376FF;
   --purple: #9C96E8;
   --blue:  #92D7FF;
+
 }
 
+
+
+/* CSS reset! */
+
+tml, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* end of reset! */
+
+
+
+body {
+  font: normal x-small verdana,arial,helvetica,sans-serif;
+}
 div#nav {
     height: 60px;
     position: fixed;
@@ -46,6 +102,7 @@ a#logolink {
     background: white;
     color: #9C96E8;
     transition: .5s;
+    cursor: pointer;
 }
 
 .grab {
@@ -117,6 +174,28 @@ align-items: center;
     width: 100%;
     color: #353333;
 
+}
+
+/*footer stuff */
+
+
+.footerbits {
+    display: flex;
+    flex-direction: column;
+}
+
+.footerRow {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.copyright {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 
