--- a/public/app/views/home/home.html
+++ b/public/app/views/home/home.html
@@ -1,9 +1,9 @@
 <div class="topSlideContain">
 
   <div class="banner">
-    <span><h1>Music.</h1></span>
-    <span><h1>Mayhem.</h1></span>
-    <span><h1>Magic.</h1></span>
+    <span><h1>Music.</h1></span><br>
+    <span><h1>Mayhem.</h1></span><br>
+    <span><h1>Magic.</h1></span><br>
     <span><h1>This May.</h1></span>
 
   </div>
