--- a/public/app/views/forum/addpost.html
+++ b/public/app/views/forum/addpost.html
@@ -10,15 +10,15 @@
 
   <div class="titleField">
     <h3>Title:</h3>
-    <input class = "titleText" type="text" name="title" placeholder="Title Goes Here...">
+    <input ng-model="postTitle" maxlength="200" class = "titleText" type="text" name="title" placeholder="Title Goes Here...">
   </div>
 
   <div class="textField">
     <h3>Text: (optional)</h3>
-    <textarea name="postText" placeholder="Text Goes Here..." rows="8" cols="80"></textarea>
+    <textarea ng-model="postText" name="postText" maxlength="1100" placeholder="Text Goes Here..." rows="8" cols="80"></textarea>
   </div>
 
   <div class="submitField">
-    <button class = "submitPostButton" type="button" name="button">Submit Your Post</button>
+    <button ng-click="postNewThread()" class= "submitPostButton" type="button" name="button">Submit Your Post</button>
   </div>
 </div>
