--- a/public/app/views/forum/forum.html
+++ b/public/app/views/forum/forum.html
@@ -26,7 +26,7 @@
             <h3 ui-sref="thread({thread_id: thread.thread_id})">{{thread.thread_title}}</h3>
           </div>
             <div class="threadAuthor">
-              <p>{{time}} by <a href="#" class="author">{{thread.author_display}}</a></p>
+              <p>{{thread.timeAgo}} by <a href="#" class="author">{{thread.author_display}}</a></p>
             </div>
         </div>
       </div>
