comments are adding to database properly

--- a/public/app/views/forum/thread.html
+++ b/public/app/views/forum/thread.html
@@ -34,7 +34,7 @@
 
 
 <div class="newComment">
-  <textarea rows="4" placeholder="type a new, top level comment"></textarea>
+  <textarea rows="4" ng-model= "comment_content" placeholder="type a new, top level comment"></textarea>
 
 
   <button ng-click="addComment()" class="saveNewComment" type="submit" name="button">Post!</button>
