--- a/public/app/style/master.css
+++ b/public/app/style/master.css
@@ -88,6 +88,7 @@ a#logolink {
     /* justify-content: space-between; */
     align-items: center;
     max-width: 100%;
+    color: #92D7FF;
 }
 .menuItem {
     height: 100%;
