--- a/public/app/style/style.css
+++ b/public/app/style/style.css
@@ -19,6 +19,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -48,7 +49,7 @@ table {
 
 
 body {
-  color: red;
+
 	font: normal x-small verdana,arial,helvetica,sans-serif;
 }
 
@@ -59,6 +60,6 @@ h2 {
 
 @media only screen and (min-width: 600px) {
     body {
-        color: lightblue;
+
     }
 }
