--- a/public/app/views/forum/thread.html
+++ b/public/app/views/forum/thread.html
@@ -1,23 +1,31 @@
-<div style="height: 60px"></div>
-<div class="inTheThread">
 
-  <button type="button" ui-sref="forum" class = "flatRainbow" name="toForum">Back To Forum</button>
+<div class="inTheThread">
+  <div class="threadDiv">
+
+  <div class="threadTopper">
+
+
+  <button type="button" ui-sref="forum" class = "flatRainbow backForum" name="toForum">Back To Forum</button>
 
 <div class="ThreadInfo">
   <h1>{{thread.thread_title}}</h1>
-  <p>by {{thread.author_display}} {{thread.timeAgo}} hours/mins/days ago</p>
+  <p>submitted {{thread.timeAgo}} by <span class="threadmaker">{{thread.author_display}}</span></p>
 
   <div class="threadText">
-    <p>{{thread.thread_content}}</p>
+    <pre>{{thread.thread_content}}</pre>
   </div>
 </div>
 
-<div class="commentCounter">
-  <p>### of comments </p>
+<button ng-click="reportThread(thread.thread_id)" type="button" name="reportthread" class = "reportThread">Report Thread</button>
+
 </div>
 
+<!-- <div class="commentCounter">
+  <p>### of comments </p>
+</div> -->
 
-  <hr style="border-top: dotted 1px;" />
+
+
   <!-- <div class="selectedCommentOrder">
     <div class="currentOrder">
       <p>Sort By: <span>NEWEST</span></p>
@@ -33,61 +41,58 @@
 
 
 
-<div class="newComment">
-  <textarea rows="4" ng-model= "comment_content" placeholder="type a new, top level comment"></textarea>
 
-
-  <button ng-click="addComment()" class="saveNewComment" type="submit" name="button">Post!</button>
-</div>
+<div class="commentArea">
 
 
 
+  <div class="newComment">
+    <textarea rows="4" ng-model= "comment_content" placeholder="type a new, top level comment"></textarea>
+
+
+    <button ng-click="addComment()" class="saveNewComment" type="submit" name="button">Post!</button>
+  </div>
 
 
 <div class="commentsJar">
 
 
 
-  <div class="top-level-comment">
+  <div class="top-level-comment" ng-repeat="comment in topLevelComments">
     <p class="tagline"><a href="javascript:void(0)" class="expand" onclick="return togglecomment(this)">[–]</a>
-      <a href="https://www.reddit.com/user/mredding" class="author may-blank id-t2_3y1ul">mredding</a>
-      <span class="userattrs"></span>  <time title="Fri Jun 16 14:45:14 2017 UTC" datetime="2017-06-16T14:45:14+00:00" class="live-timestamp">6 hours ago</time>
+      <a href="#" class="comment_author">{{comment.author_display}}</a>
+      <time>{{comment.timeAgo}}</time>
 
-    </p>
 
-    <form action="#" class="usertext warn-on-unload" onsubmit="return post_form(this, 'editusertext')" id="form-t1_dizi3imc0f">
-      <input type="hidden" name="thing_id" value="t1_dizi3im"><div class="usertext-body may-blank-within md-container "><div class="md"><p>Software developer here,</p>
 
-  <p>I wrote software for these one-armed bandits for ~5 years. Detecting a fault in the machine isn't too hard, I suppose, though I never had to do it. If the machine is a "participation" game, then some of the winnings of each game are paid out to the manufacturer, because just making and selling machines isn't profitable enough to stay in business. The catch is the manufacturer pays out the jackpots, not the casino. So the casino doesn't give a shit if you hit 10 jackpots in a row, and neither do the commissioners, for them, they're just doing their job.</p>
+      <input type="hidden" name="thing_id" value="t1_dizi3im">
+      <div class="usertext-body may-blank-within md-container ">
+        <div class="comment_content">
 
-  <p>When a jackpot is hit, the whole bank of machines are roped off and kept under guard. A poor (EDIT:) sonofabitch engineer or two are dragged out of bed in the middle of the night, or pulled out of their children's birthday party, whatever, and they're stuffed into a plane with all sorts of gear and shit. They will systematically diagnose, test, and dismantle that machine down to the rivets to make sure it wasn't tampered with or flawed. It's the company's responsibility to prove the win was false if they want to save their cash.</p>
+          <pre>{{comment.comment_content}}</pre>
 
-  <p>But even the manufacturer plans for payouts, it's all part of the budget. My employer designed the math behind their games so one of their participation games, in the entire market, like a Wide Area Progressive, would hit every 6 months. We had one WAP hit twice in one month just after release once, the execs puckered up so tight they shit diamonds to cover the bills that day.</p>
-  </div>
-  </div></form><ul class="flat-list buttons"><li class="report-button"><a href="javascript:void(0)" class="reportbtn access-required" data-event-action="report">report</a></li><li class="reply-button"><a class="access-required" href="javascript:void(0)" data-event-action="comment" onclick="return reply(this)">reply</a></li></ul><div class="reportform report-t1_dizi3im"></div></div>
-
-  <!-- <div class="commentContain">
-    <div class="commentInfo">
-      <a href="javascript:void(0)" class="expand" onclick="return togglecomment(this)">[–]</a><div class="commentAuthor">
-        <a href="#"></a><p>author345 hours/min/days ago</p>
+        </div>
       </div>
-    </div>
+  <ul class="flat-list buttons">
+    <li class="report-button" ng-click="reportComment(comment.comment_id)">
+      <a class="reportbtn access-required" data-event-action="report">report</a>
+    </li>
+    <li class="reply-button">
+      <a class="access-required" href="javascript:void(0)" data-event-action="comment" onclick="return reply(this)">reply</a>
+    </li></ul>
 
 
-    <div class="commentText">
-      <p>This is some comment text that will display as a comment</p>
-    </div>
+    <textarea class="replybox" name="replybox" rows="4" cols="50" placeholder="type your reply"></textarea>
 
-    <div class="commentOptions">
-      <p>reply</p>
-    </div>
-  </div> -->
+
+  </div>
 
 
 
 
 </div>
 
+</div>
 
-
+</div>
 </div>
