--- a/public/app/views/home/home.html
+++ b/public/app/views/home/home.html
@@ -1,16 +1,118 @@
-<div class="topSlideContain">
 
+
+<div class="topSlideContain">
   <div class="banner">
     <span><h1>Music.</h1></span><br>
     <span><h1>Mayhem.</h1></span><br>
     <span><h1>Magic.</h1></span><br>
     <span><h1>This May.</h1></span>
-
+    <div class="homeButtons">
+      <button type="button" class="tickets" name="button">Tickets</button>
+      <button type="button" ui-sref="forum" class= "homeForumButton" name="button">Forum</button>
+    </div>
   </div>
-
-
 </div>
 
+<section class="purpleHome">
+  <div class="whatEvenIs">
+    <div class="whatGreet">
+      <h2>Rhapsody Is</h2>
+      <h2>Radical Celebration</h2>
+      <img id="gonHome" src="../app/images/home/gon.jpg" alt="">
+    </div>
+  <div class="whatText">
+    <div class="half">
+      <p>Rhapsody takes over place four days and three nights.</p>
+      <p>Event participants camp alone or organized into theme camps.</p>
+      <p>This event ignites innovative creativity and self expression.</p>
+      <p>It encorporates principles such as self reliance and civic responsibility.</p>
+    </div>
+    <div class="half">
+      <p>Fire performers, musicians, and artists alike call Rhapsody home.</p>
+      <p>This is not a party. It is not a concert. </p>
+      <p>Rhapsody celebrates shared values, art, and good for all.</p>
+      <p>It does so in a fashion you haven't experienced anything like before.</p>
 
 
-<p>Whatever, take me to the <a ui-sref = 'forum'>forum</a></p>
+    </div>
+  </div>
+  </div>
+</section>
+
+<section class="weaver">
+  <div class="lineUp">
+    <div class="mainStage">
+      <h3>Looking for Our Lineup?</h3>
+      <h3>Look Inward.</h3>
+    </div>
+  </div>
+</section>
+
+
+<section class="participation">
+  <div class="lineUpEx">
+    <div class="lineUpExHead">
+      <h3>Entertainment Though Participation</h3>
+    </div>
+
+    <div class="fireBall">
+      <div class="fireBallPic">
+        <img src="/app/images/home/fireball.jpg" alt="">
+      </div>
+
+      <div class="fireBallText">
+        <p>At Rhapsody, anyone can be the headliner.</br>
+          Whether you DJ, sculpt, paint, or juggle, everything comes together</br>
+          into a unorchestrated symphony of excellence. </br></p>
+
+        <p>A "main stage" doesn't happen at this event.</br>
+            Anyone is welcomed to set up and perform - coordinate with other </br>
+            participants to establish different areas and make it work!</br></p>
+
+        <p>We strongly encourage you to participate in the event any way you can.</br>
+            This idea gets expressed through a community principle fondly </br>
+            known as "radical participation".</br></p>
+
+        <p>In other words, the event's success results from everyone's actions.</br>
+            So bring your music, bring your nerf guns, bring your paint. </br>
+            Whatever you do to express yourself, it's welcomed and encouraged here.</br></p>
+      </div>
+
+
+    </div>
+  </div>
+
+</section>
+
+<section class="iconThirds">
+  <div class="entertainment" style="height: 600px">
+    <div class="third">
+      <div class="iconHead">
+        <i class="fa fa-cutlery fa-9" aria-hidden="true"></i>
+        <h3>Come Prepared</h3>
+      </div>
+      <p>When packing for the weekend -
+        your first priority should be everything you need to survive.
+        Food, water, trashbags, a tent... whatever you need to make it a weekend in the woods!</p>
+      <button ui-sref="prepare" class="prepButton" type="button" name="button">More About Preparation</button>
+    </div>
+
+    <div class="third">
+      <div class="iconHead">
+        <i class="fa fa-heart fa-9" aria-hidden="true"></i>
+        <h3>Gifting Economy</h3>
+      </div>
+      <p>Your money is no good here. Our event features an economy of gifting. Bringing bacon or cookies or whatever you can imagine to participate in the gifting economy guaruntees you'll connect with our community fast.</p>
+      <button ui-sref="principles" class="cultureButton" type="button" name="button">The Principles Powering Our Culture</button>
+    </div>
+
+    <div class="third">
+      <div class="iconHead">
+        <i class="fa fa-fire-extinguisher fa-9" aria-hidden="true"></i>
+        <h3>Safety 3rd</h3>
+      </div>
+      <p>If you plan on performing with fire, come prepared and know that you abolustely must be given a wrist band to perform before lighting up. Attend one of our fire safety workshops and you'll be on track quick!</p>
+      <button ui-sref="fire" class= "fireButton" type="button" name="button">Fire Safety</button>
+    </div>
+  </div>
+</section>
