--- a/public/app/views/forum/thread.html
+++ b/public/app/views/forum/thread.html
@@ -56,36 +56,8 @@
 
 <div class="commentsJar">
 
+<comments comment="comment" ng-repeat="comment in comments"></comments>
 
-
-  <div class="top-level-comment" ng-repeat="comment in topLevelComments">
-    <p class="tagline"><a href="javascript:void(0)" class="expand" onclick="return togglecomment(this)">[–]</a>
-      <a href="#" class="comment_author">{{comment.author_display}}</a>
-      <time>{{comment.timeAgo}}</time>
-
-
-
-      <input type="hidden" name="thing_id" value="t1_dizi3im">
-      <div class="usertext-body may-blank-within md-container ">
-        <div class="comment_content">
-
-          <pre>{{comment.comment_content}}</pre>
-
-        </div>
-      </div>
-  <ul class="flat-list buttons">
-    <li class="report-button" ng-click="reportComment(comment.comment_id)">
-      <a class="reportbtn access-required" data-event-action="report">report</a>
-    </li>
-    <li class="reply-button">
-      <a class="access-required" href="javascript:void(0)" data-event-action="comment" onclick="return reply(this)">reply</a>
-    </li></ul>
-
-
-    <textarea class="replybox" name="replybox" rows="4" cols="50" placeholder="type your reply"></textarea>
-
-
-  </div>
 
 
 
