--- a/public/app/style/thread.css
+++ b/public/app/style/thread.css
@@ -18,6 +18,48 @@
 
 }
 
+
+
+.star {
+    font-size: 35px;
+    color: #a8a67a;
+    padding-top: 4px;
+    padding-right: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 155px;
+    margin-bottom: 16px;
+    cursor: url("../app/images/cursor.png"), auto;
+}
+
+.star p {
+    font-size: 12px;
+    display: inline;
+}
+
+.unstar i.fa.fa-star.fa-6 {
+    color: black;
+}
+
+.unstar {
+    font-size: 35px;
+    color: #a8a67a;
+    padding-top: 4px;
+    padding-right: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 155px;
+    margin-bottom: 16px;
+    cursor: url("../app/images/cursor.png"), auto;
+}
+
+.unstar p {
+    font-size: 12px;
+    display: inline;
+}
+
 button.reportThread {
     font-size: 8px;
     border: 0;
@@ -156,6 +198,19 @@ button.cancelReply:hover {
     color: black;
     background: white;
 }
+/*limit digest limit comments depth*/
+comments comments comments comments comments comments comments comments comments comments li.reply-button {
+    display: none;
+}
+
+comments comments comments comments a.comment_author.ng-binding {
+    color: rgba(255, 255, 255, 0.75);
+}
+
+comments comments comments time.ng-binding {
+    color: #e7e7e7;
+}
+
 @media only screen and (min-width: 600px) {
   .inTheThread.ng-scope {
       padding: 8px;
