--- a/public/app/views/forum/addpost.html
+++ b/public/app/views/forum/addpost.html
@@ -2,6 +2,8 @@
 
 <div class="submitPost">
 
+  <button type="button" ui-sref="forum" class="flatRainbow backForum" name="toForum" href="#!/forum">Back To Forum</button>
+
   <h2>Submit to Rhaphorum</h2>
 
   <div class="instruct">
