--- a/public/app/views/forum/forum.html
+++ b/public/app/views/forum/forum.html
@@ -4,6 +4,14 @@
 
 <h2>Rhaphorum - The Rhapsody Forum</h2>
 
+<!-- <div class="updates">
+  <div class="updatesList">
+    <div class="oneUpdate">
+      <h2>New comments on this thread: [thread title....]</h2>
+    </div>
+  </div>
+</div> -->
+
 <div class="newThreadContain">
   <button ui-sref="addpost" class="add-post" type="button" name="button">New Post</button>
 </div>
@@ -21,6 +29,8 @@
 
 
       <div class="threadItem">
+
+
         <div class="thread">
           <div class="threadTitle">
             <h3 ui-sref="thread({thread_id: thread.thread_id})">{{thread.thread_title}}</h3>
