--- a/public/app/style/master.css
+++ b/public/app/style/master.css
@@ -184,7 +184,7 @@ align-items: center;
 .footerbits {
     display: flex;
     flex-direction: column;
-    color: red;
+    color: blue;
 }
 
 .footerRow {
