--- a/public/app/views/forum/thread.html
+++ b/public/app/views/forum/thread.html
@@ -63,7 +63,7 @@
 
 <div class="commentsJar">
 
-<comments comment="comment" ng-repeat="comment in comments"></comments>
+<comments comment="comment" ng-repeat="comment in comments | orderBy: '-created_at'"></comments>
 
 
 
