--- a/public/app/views/forum/forum.html
+++ b/public/app/views/forum/forum.html
@@ -31,7 +31,7 @@
   <div class="threadsContainer">
     <div class="searchThreads">
       <h4>Search:</h4>
-      <input ng-model="query" type="text" name="search" placeholder="seach by title or author">
+      <input ng-model="query" type="text" name="search" placeholder="search by title or author">
     </div>
 
     <div class="threadslist" ng-repeat="thread in threads | orderBy: '-thread_id' | filter:query ">
