--- a/public/app/style/home.css
+++ b/public/app/style/home.css
@@ -257,6 +257,7 @@ i.fa.fa-fire-extinguisher.fa-9 {
   font-size: 1.2em;
   max-width: 293px;
   margin: 0 auto;
+  line-height: 2em;
 }
 
 .third button {
